--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div class="promo row row--padding">
-  <a class="logo logo--secretescapes" href="https://www.secretescapes.com/current-sales">
+  <a class="promo__logo logo logo--secretescapes" href="https://www.secretescapes.com/current-sales">
     <img class="js-svg-swap" src="{{site.baseurl}}/img/logo/secret-escapes.png" alt="Secret Escpaes Logo">
   </a>
   <p>Book your luxury adventure holiday to South Africa with Secret Escapes</p>
