--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <div class="fixed-background" style="background-image: url('{{site.baseurl}}/img/bg/{{page.class}}.jpg');"></div>
     {% if page.class == "overview" %}
       <video class="video-background" autoplay loop muted>
-        <source src="video/Nelly-elephant.mp4" type="video/mp4">
+        <source src="video/nelly-elephant.mp4" type="video/mp4">
       </video>
     {% endif %}
 
