--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -3,11 +3,15 @@
 
 .home {
   &__page {
-    padding-top: ($margin * 1.5);
-    padding-bottom: ($margin * 1.5);
+    padding-top: $margin;
+    padding-bottom: $margin;
     background-color: $white;
     background-color: $white-9;
     color: $text-black;
+    @include bp(large){
+      padding-top: ($margin * 1.5);
+      padding-bottom: ($margin * 1.5);
+    };
   }
   &__page-title {
     text-transform: capitalize;
