--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -32,7 +32,13 @@ h5, .h5 {
   text-transform: uppercase;
 }
 
-h1, .h1 { font-size: 3.375em; }
+h1, .h1 {
+  font-size: 2.986em;
+  line-height: 1;
+  @include bp(large){
+    font-size: 3.375em;
+  }
+}
 h2, .h2 { font-size: 2em; }
 h3, .h3 { font-size: 1.728em; }
 h4, .h4 { font-size: 1.2em; }
