social meta description fix

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,12 +11,12 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{ site.title}}{% else %}{{ site.title }}{% endif %}">
   <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
-  <meta property="og:description" content="{% if page.meta-description %}{{ page.meta-description | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
   <meta property="og:image" content="{{ site.url }}{{ site.baseurl }}/img/social/social.jpg">
   <meta name="twitter:card" value="summary_large_image">
   <meta name="twitter:site" content="@secret_escapes">
   <meta name="twitter:title" content="{{ page.title }} | {{ site.title}}">
-  <meta name="twitter:description" content="{% if page.meta-description %}{{ page.meta-description | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="twitter:description" content="{% if page.intro %}{{ page.intro | strip_html | strip_newlines | truncate: 155 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/img/social/social.jpg">
   <!-- END Social Data -->
 
