query string for stylist offer in content

--- a/_includes/site-navigation.html
+++ b/_includes/site-navigation.html
@@ -1,2 +1,2 @@
 {% assign nav-order = site.pages | sort:"nav-order" %}
-{% for page in nav-order %}{% if page.title %}<li class="{{include.block}}__item"><a class="{{include.block}}__link {{include.block}}__link--{{ page.class }}" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
+{% for page in nav-order %}{% if page.nav-order %}<li class="{{include.block}}__item"><a class="{{include.block}}__link {{include.block}}__link--{{ page.class }}" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>{% endif %}{% endfor %}
