--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -111,3 +111,7 @@ section {
   }
 
 }
+
+// columns with no breakpoints
+.row--no-break .row__column { margin-top: 0; }
+.row--no-break.row--columns-8-4 { @include two-column-grid( 8, 4 ); }
