hiding lifestyle page & multiple stylist offers

--- a/_sass/_offers.scss
+++ b/_sass/_offers.scss
@@ -90,6 +90,9 @@
     font-size: 1em;
     background-color: $white;
     @include gallery(12);
+    & + & {
+      @include break;
+    }
     .offer__bottom {
       padding: 0;
       background-color: transparent;
