--- a/_includes/offer-full-width.html
+++ b/_includes/offer-full-width.html
@@ -1,12 +1,12 @@
-<div class="offer offer--full-width">
+<div id="offer-{{ offer.class }}" class="offer offer--full-width">
   <div class="row row--columns-8-4 row--no-break offer__image offer__image--full-width">
     <div class="row__column">
-      <a href="{{offer.link}}">
+      <a id="image-link-{{ offer.class }}" href="{{offer.link}}">
         <div class="bg-image-ratio bg-image-ratio--3-2" style="background-image: url('{{ site.baseurl }}/img/offers/{{ offer.class }}.jpg')"></div>
       </a>
     </div>
     <div class="row__column">
-      <a href="{{offer.link}}">
+      <a id="image-smaller-link-{{ offer.class }}" href="{{offer.link}}">
       <div class="bg-image-ratio bg-image-ratio--3-2" style="background-image: url('{{ site.baseurl }}/img/offers/{{ offer.class }}-01.jpg')"></div>
       <div class="bg-image-ratio bg-image-ratio--3-2" style="background-image: url('{{ site.baseurl }}/img/offers/{{ offer.class }}-02.jpg')"></div>
       </a>
