--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,9 @@
     <div class="fixed-background" style="background-image: url('{{site.baseurl}}/img/bg/{{page.class}}.jpg');"></div>
     {% if page.class == "overview" %}
       <video class="video-background" autoplay loop muted>
-        <source src="video/nelly-elephant.mp4" type="video/mp4">
+        <source src="video/519506400.mp4" type="video/mp4">
       </video>
+      <div class="video-background__overlay"></div>
     {% endif %}
 
   </body>
