--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
           </div>
           <div class="row__column">
             <h4 class="title title--smaller title--lower">Insider Knowledge</h4>
-            <p>We know South Africa, like pretty well but we want to give you information you literally can’t find anywhere else… we’re talking about Insider knowledge.</p>
+            <p>We’ve brought together a range of South African locals, from an Olympic athlete to a musician, to offer you insider knowledge on this fascinating land.</p>
             <a href="{{site.baseurl}}/experts" class="btn">Find Out More</a>
           </div>
         </div>
