--- a/_includes/competition-promo.html
+++ b/_includes/competition-promo.html
@@ -1,7 +1,7 @@
 <div class="row row--columns-7-5 row--columns-vertical-align row--padding inner-section inner-section--dark competition-promo">
   <div class="row__column">
     <h1 class="title title--large title--bolder title--tight">Win A Once In A Lifetime Holiday To South Africa</h1>
-    <p class="paragraph paragraph--large">Enter here for the chance to win a luxury tour of this enigmatic land, courtesy of Premier&nbsp;Holidays</p>
+    <p class="paragraph paragraph--large">Enter here for the chance to win a once-in-a-lifetime holiday to this dynamic land, courtesy of Premier Holidays</p>
     <a href="{{site.baseurl}}/competition" class="btn btn--large btn--orange">Enter Now</a>
   </div>
   <div class="row__column"></div>
