--- a/css/main.scss
+++ b/css/main.scss
@@ -5,7 +5,7 @@
 @import
   '../bower_components/reset-css/_reset',
   '../bower_components/susy/sass/susy',
-  '../bower_components/unslider/dist/css/unslider',  
+  '../bower_components/unslider/dist/css/unslider',
   'core',
   'typography',
   'grid',
@@ -14,7 +14,5 @@
   'article',
   'styles',
   'offers',
-  'competition',
-  'secrets',
-  'game'
+  'competition'
 ;
