--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -8,7 +8,6 @@
   })(window,document,'script','dataLayer','GTM-TH4FN5');</script>
 <!-- End Google Tag Manager -->
 
-
 <div class="hidden">
 
   <!--
@@ -25,6 +24,23 @@
   </script>
   <noscript>
     <img src="https://ad.doubleclick.net/ddm/activity/src=5441907;type=invmedia;cat=nmtem7ma;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;ord=1?" width="1" height="1" alt=""/>
+  </noscript>
+  <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
+
+  <!--
+  Start of DoubleClick Floodlight Tag: Please do not remove
+  Activity name of this tag: Impression - partnership
+  URL of the webpage where the tag is expected to be placed: http://country.southafrica.net
+  This tag must be placed between the <body> and </body> tags, as close as possible to the opening tag.
+  Creation Date: 10/25/2016
+  -->
+  <script type="text/javascript">
+  var axel = Math.random() + "";
+  var a = axel * 10000000000000;
+  document.write('<img src="https://ad.doubleclick.net/ddm/activity/src=5441907;type=invmedia;cat=7zh2lljo;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;ord=' + a + '?" width="1" height="1" alt=""/>');
+  </script>
+  <noscript>
+  <img src="https://ad.doubleclick.net/ddm/activity/src=5441907;type=invmedia;cat=7zh2lljo;dc_lat=;dc_rdid=;tag_for_child_directed_treatment=;ord=1?" width="1" height="1" alt=""/>
   </noscript>
   <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
 
