--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -7,9 +7,17 @@
     margin-bottom: ($margin * 4);
   }
   &__intro {
-    // color: $off-white;
     max-width: $xlarge;
     &--text-shadow { text-shadow: 0px 2px 19px $black-75; }
+  }
+  &__intro-logo {
+    margin-top: 1.25em;
+    @include bp(xxxlarge){
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      margin-top: 0;
+    }
   }
 }
 
