--- a/_includes/tracking.html
+++ b/_includes/tracking.html
@@ -44,4 +44,6 @@
   </noscript>
   <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
 
+  <img src="https://tag.researchnow.com/t/beacon?adn=1&ca=Oct16_SATB_Digital-2016-2017&cr=Partnership&pl=Partnership&pr=10665&si=SecretEscapes " />
+
 </div>
