--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,8 +18,8 @@
             </a>
           </div>
           <div class="row__column">
-            <h4 class="title title--smaller title--lower">Insider Knowledge</h4>
-            <p>We’ve brought together a range of South African locals, from an Olympic athlete to a musician, to offer you insider knowledge on this fascinating land.</p>
+            <h4 class="title title--smaller title--lower">Expert Knowledge</h4>
+            <p>We’ve brought together a range of South African locals, from an Olympic athlete to a musician, to offer you expert knowledge on this fascinating land.</p>
             <a href="{{site.baseurl}}/experts" class="btn">Find Out More</a>
           </div>
         </div>
