--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -18,6 +18,23 @@
   }
 }
 
+// appears as a special sub title on secret and value pages
+.logo-credit {
+  margin-top: ($margin / 2);
+  margin-bottom: $margin;
+  > * { vertical-align: middle; }
+  &__text {
+    font-size: 1.5em;
+    margin-right: .2em;
+  }
+  &__image {
+    &.logo--secret-escapes {
+      max-width: 160px;
+      padding-top: 7px;
+    }
+  }
+}
+
 
 // ---------- button ----------
 
@@ -30,14 +47,15 @@
   font-weight: 600;
   text-align: center;
   border-radius: 100em;
+  cursor: pointer;
   &:hover {
     color: white;
     background-color: $se-orange;
     text-decoration: none;
   }
-  &--large {
-    font-size: 1.2em;
-  }
+  &--large { font-size: 1.2em; }
+  &--xlarge { font-size: 1.5em; }
+
   &--orange {
     color: $white;
     background-color:  $se-orange;
@@ -73,41 +91,6 @@ body {
   bottom: 0;
   z-index: $z-background;
   @include background-attributes;
-}
-
-.video-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: $z-background;
-  display: none;
-  width: 100%;
-  min-height: 100%;
-  max-height: 100%;
-  background-position: center;
-  background-size: 100%;
-  background-size: cover;
-  object-fit: cover;
-  vertical-align: middle;
-  @include bp(large){
-    display: block;
-    .no-supports &,
-    .touch & { display: none; }
-  }
-  &__overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: $z-background;
-    background-color: rgba(5, 24, 34, 0.66);
-    opacity: 0;
-    .no-supports &,
-    .touch & { display: none; }
-  }
 }
 
 
