value game with final content

--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -163,6 +163,7 @@ $z-overlay-upper:   25;
 $z-overlay:         20;
 $z-nav-upper:       15;
 $z-nav:             10;
+$z-content-overlay: 9;
 $z-content-upper:   5;
 $z-content:         0;
 $z-background:      -1;
