--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -1,144 +1,150 @@
-.game {
-  overflow: hidden;
-  height: 100%;
-  &__questions {
-    height: 100%;
-  }
-  &__title{
-    font-size: 2.25em;
-    text-transform: uppercase;
-    letter-spacing: .25em;
-    line-height: 1;
-  }
-  &__middle {
-    font-size: 1.8em;
-    line-height: 0;
-  }
-  &__close {
-    display: block;
-    height: 60px;
-    width: 60px;
-    background-image: url('../img/icons/close.png');
-    svg & { background-image: url('../img/icons/close.svg'); }
-    background-size: 27px;
-    background-position: bottom left;
-    background-repeat: no-repeat;
-    text-indent: -999%;
-    overflow: hidden;
-  }
-  &__overlay {
-    position: fixed;
-    z-index: $z-content-upper;
-    &--top-right {
-      top: 0;
-      right: 0;
-    }
-    &--top-center {
-      top: 30px;
-      left: 50%;
-      width: 100%;
-      transform: translateX(-50%);
-    }
-    &--center {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-    }
-  }
-  &--starter {
-    height: 25em;
-    .game__overlay {
-      position: absolute;
-      z-index: $z-overlay;
-      width: auto;
-    }
-    .option__label {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: $z-content-upper;
-      font-size: 2.25em;
-    }
-    .option__bg {
-      z-index: $z-content;
-    }
-  }
-  &__results {
-    height: 100%;
-    overflow-y: auto;
-  }
+.options {
 }
 
-
-.question {
+.inline-divider {
+  display: inline-block;
   height: 100%;
-  display: none;
-  &.is-active{
-    display: block;
-  }
+  width: 1px;
+  margin-left: .25em;
+  margin-right: .25em;
+  overflow: hidden;
+  background-color: $white-5;
+  text-indent: -999999em;
+  vertical-align: sub;
 }
 
 .option {
-  position: absolute;
-  top:0;
-  bottom:0;
-  width: 100%;
-  height: 50%;
-  &__bg {
+  position: relative;
+  height: 22em;
+  padding: 1em;
+  background-color: $se-dark-grey-85;
+  @include background-attributes;
+  cursor: pointer;
+
+  &__title {
     position: absolute;
-    top:0;
+    left: 0;
+    bottom: 0;
+    z-index: $z-content-upper;
+    display: inline;
+    padding: .75em .8em;
+    background-color: $black-66;
+    line-height: 1;
+    font-size: 1.728em;
+    cursor: default;
+  }
+
+  &__detail {
+    position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: $z-background;
-    @include background-attributes;
+    z-index: $z-content-upper;
+    padding: 1.2em;
+    background-color: $black-85;
+    font-family: $copy-font-family;
+    cursor: default;
   }
-  &--right {
-    top: auto;
-    bottom: 0;
-    label {
-    }
-  }
-  &--left {
-    top: 0;
-    bottom: auto;
-    label {
-    }
-  }
-  @include bp(large){
-    width: 50%;
-    height: 100%;
-    &--right {
-      right: 0;
-    }
-    &--left {
-      left: 0;
-    }
-  }
-  &__label {
-    display: block;
-    height: 100%;
-    text-align: center;
-    font-size: 3em;
-    font-weight: 600;
-    line-height: 1;
-    cursor: pointer;
-    background-color: $black-66;
-    @include transition;
-    .flexbox & {
-      display:flex;
-      align-items: center;
-      justify-content: center;
-    }
-    &:hover {
-      text-decoration: none;
-      background-color: $black-5;
-    }
-  }
-  &__input {
+
+  &__selected {
     position: absolute;
-    visibility: hidden;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: $z-content;
+    background-color: rgba(34,209,192,.66);
+    background-image: url('../img/icons/tick.png');
+    @include background-attributes;
+    background-size: 8em;
+    .svg & { background-image: url('../img/icons/tick.svg');}
+  }
+
+  &__icon {
+    position: absolute;
+    right: 1em;
+    z-index: $z-content-upper;
+    display: block;
+    height: 44px;
+    width: 44px;
+    border-radius: 44px;
+    cursor: pointer;
+    background-color: $black-5;
+    @include background-attributes;
+    background-size: 20px;
+    @include transition;
+    &--open  {
+      background-size: 14px;
+      background-image: url('../img/icons/question.png');
+      .svg & { background-image: url('../img/icons/question.svg'); }
+      &:hover { border-color: $white; }
+    }
+    &--close {
+      background-size: 18px;
+      background-color: $black;
+      background-image: url('../img/icons/close.png');
+      .svg & { background-image: url('../img/icons/close.svg'); }
+    }
+    @include bp(xxlarge){
+      height: 32px;
+      width: 32px;
+      border-radius: 32px;
+      &--open { background-size: 10px; }
+      &--close { background-size: 14px; }
+    }
+  }
+
+
+  // grid stuff
+  & + & { margin-top: $margin; }
+  @include bp(large){
+    @include layout(12 1/2);
+    @include gallery(6);
+    margin-top: gutter(12);
+    & + & { margin-top: gutter(12); }
+  }
+  @include bp(xxlarge){
+    @include layout(12 1/3);
+    @include gallery(4);
+    margin-top: gutter(12);
+    & + & { margin-top: gutter(12); }
+  }
+  // end grid stuff
+}
+
+.result {
+  &__total {
+    display: block;
+    padding-top: .5em;
+    padding-bottom: .5em;
+    line-height: 1;
+    vertical-align: middle;
+    > * {
+      line-height: 1;
+      vertical-align: middle;
+    }
+    &:before {
+      content: '';
+      display: inline-block;
+      height: 1.75em;
+      width: 2.75em;
+      margin-right: .5em;
+      line-height: 1;
+      vertical-align: middle;
+      @include background-attributes;
+    }
+    @include bp(medium){
+      display: inline-block;
+      padding-top: 0;
+      padding-left: 1em;
+      padding-right: 1em;
+      padding-bottom: 0;
+    }
+    &--uk:before {
+      background-image: url('../img/content/value/flag-uk.png');
+    }
+    &--sa:before {
+      background-image: url('../img/content/value/flag-sa.png');
+    }
   }
 }
