--- a/_sass/_secrets.scss
+++ b/_sass/_secrets.scss
@@ -1,94 +1,48 @@
 // styles for the secrets page
 
-
-$secret-height: 550px;
+$secret-height: 400px;
 .secret {
-  position: relative;
-  overflow: hidden;
-  @include transition;
-
-  &__content { background-color: $black; }
+  &__wrap { height: $secret-height; }
   &__cover {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     bottom: 0;
-    z-index: $z-nav;
-    width: 100%;
-    padding-top: 33.33%;
-    text-align: center;
-    font-size: 20em;
-    font-weight: 100;
-    line-height: .72;
-    background-color: $black;
+    z-index: $z-content-overlay;
+    display: none;
+    background-color: $black-75;
+    background-image: url('../img/icons/question-large.png');
+    background-repeat: no-repeat;;
+    background-position: center;
+    background-size: auto 150px;
     cursor: pointer;
     user-select: none;
-    @include transition;
-    .flexbox & {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding-top: 0;
-    }
-    &.removed {
-      left: -100%;
+    .svg & { background-image: url('../img/icons/question-large.svg'); }
+    @include bp(large){
+      background-size: auto 200px;
     }
   }
-  &__bg{
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: $z-content;
     @include background-attributes;
-    background-image: url('../img/img.png');
-    &:before {
-      display: block;
-      content: "";
-      width: 100%;
-      padding-top: 66.666666666667%;
-    }
+    background-image: url('../img/bg/overview.jpg');
   }
-  @include bp(xlarge){
-    height: $secret-height;
-    &:hover {
-      transform: translateY(-10px);
-      &.is-revealed { transform: none; }
-    }
-    &__content {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: $z-content-upper;
-      max-height: ($secret-height / 3);
-      background-color: transparent;
-    }
-    &__bg {
-      &:before {
-        display: none;
-      }
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: $z-content;
-      height: auto;
-    }
-    &__scroll {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      right: -20px;
-      padding-right: 20px;
-      overflow-y: auto;
-      overflow-x: hidden;
-    }
+  &__title {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: $z-content-upper;
+    padding: 1.5em;
+    color: $white;
+    background-color: $black-75;
   }
-  // grid layout for questions
-  & + & { margin-top: $margin; }
-  @include bp(xlarge){
-    @include layout(12 1/2);
-    @include gallery(6);
-    margin-top: gutter(12);
-    & + & { margin-top: gutter(12); }
+  &__content {
+    background-color: $black;
   }
 }
