removing pages, added countdown

--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -6,6 +6,7 @@
 $white:       #fff;
 $black:       #000;
 $light-grey:  #f2f2f2;
+$dark-grey:    #292728;
 
 $white-15:    rgba(255,255,255,.15);
 $white-25:    rgba(255,255,255,.25);
