--- a/css/main.scss
+++ b/css/main.scss
@@ -5,15 +5,11 @@
 @import
   '../bower_components/reset-css/_reset',
   '../bower_components/susy/sass/susy',
-  '../bower_components/unslider/dist/css/unslider',
   'core',
   'typography',
   'grid',
   'navigation',
-  'slider-mods',
   'article',
   'styles',
-  'offers',
-  'secrets',
-  'game'
+  'offers'
 ;
