--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -154,3 +154,49 @@ body {
     & + & { margin-top: $margin; }
   }
 }
+
+
+// ---------- ROADTRIP COUNTDOWN ----------
+
+.roadtrips {
+
+  background-color: rgba($black,.6);
+  border-radius: 5px;
+  padding: 45px 30px;
+
+  .countdown {
+    font-size: 1em;
+    font-weight: 600;
+    margin-top: 2em;
+    margin-bottom: 1em;
+    @include bp(large){
+      font-size: 1.3em;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+    }
+
+    &__item {
+      display: inline-block; width: 20%;
+      text-align: center;
+    }
+
+    &__num {
+      font-size: 1.2em;
+      font-weight: 400;
+      line-height: 1;
+      display: inline-block;
+      width: 90%;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      background-color: rgba($black,.6);
+      box-shadow: 0 0 50px 0px rgba($white,.2);
+      @include bp(large){
+        font-size: 3.6em;
+        font-weight: 200;
+      }
+    }
+
+  }
+
+}
