site structure, overview design, roadtrip draft setup

--- a/_includes/nav/group-nav.html
+++ b/_includes/nav/group-nav.html
@@ -6,7 +6,7 @@
     {% capture current %}{{ section.url | remove: slug | remove: "//" | append: "/" }}{% endcapture %}
     {% if current == include.context %}
     <li class="group-nav__item group-nav__item--{{section.id}}" style="background-image: url('{{ site.baseurl }}/img/bg/{{section.id}}-nav.jpg');">
-      <a class="group-nav__link" href="{{ site.baseurl }}{{ section.url }}"><span class="group-nav__link-wrap title title--sm title--bold title--upper">{{ section.title }}</span></a>
+      <a class="group-nav__link" href="{{ site.baseurl }}{{ section.url }}"><span class="group-nav__link-wrap title title--xs title--bold title--upper">{{ section.title }}</span></a>
     </li>
     {% endif %}
   {% endfor %}
