--- a/css/core/_colours.scss
+++ b/css/core/_colours.scss
@@ -23,3 +23,4 @@ $headline:    #2a2b2f;
 // brand colours
 $theme-primary:       #e3000f;
 $theme-secondary:     #008c3a;
+$theme-dark:          #1d1c23;
