--- a/css/grid/_horizontal.scss
+++ b/css/grid/_horizontal.scss
@@ -91,5 +91,15 @@ $page-margin: $s4;
       @include gallery($gutters 4);
       margin-bottom: gutter();
     }
+
+    // three columns without gutter
+    &--3-3-3-3 > .col { @include gallery(3); }
+
+    // three columns with gutter
+    &--3-3-3-3-gutters > .col {
+      @include gallery($gutters 3);
+      margin-bottom: gutter();
+    }
+
   }
 }
