--- a/css/nav/_microsite-nav.scss
+++ b/css/nav/_microsite-nav.scss
@@ -70,13 +70,12 @@ $nav-width-bp: 500px;
     @include transition;
     &.is-current {
       color: $white;
-      font-weight: 700;
-      background-color: rgba($black,.33);
+      background-color: rgba($white,.1);
       &:hover { color: $white; }
     }
     &:hover {
       color: $white;
-      background-color: rgba($black,.33);
+      background-color: rgba($white,.2);
     }
   }
   &__link {
