--- a/css/typography/_titles.scss
+++ b/css/typography/_titles.scss
@@ -34,9 +34,9 @@
   &--upper      { text-transform: uppercase; }
   &--italic     { font-style: italic; }
 
-  &--xxxxxl       { font-size: $s7; }
-  &--xxxxl        { font-size: $s7; }
-  &--xxxl         { font-size: $s7; }
+  &--xxxxxl       { font-size: $s7; line-height: 1.1; }
+  &--xxxxl        { font-size: $s7; line-height: 1.1; }
+  &--xxxl         { font-size: $s7; line-height: 1.1; }
   &--xxl          { font-size: $s6; }
   &--xl           { font-size: $s5; }
   &--lg           { font-size: $s4; }
