--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -44,4 +44,9 @@
 
   <script src="{{ site.baseurl }}/js/scripts.min.js"></script>
   {% if page.extra-js %}<script src="{{ site.baseurl }}/js/{{page.title | slugify}}.js"></script>{% endif %}
+
+  <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v0.40.0/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.40.0/mapbox-gl.css' rel='stylesheet' />
+
 </head>
