--- a/css/_styles.scss
+++ b/css/_styles.scss
@@ -14,6 +14,7 @@
 
   &--theme-primary { background-color: $theme-primary; }
   &--theme-secondary { background-color: $theme-secondary; }
+  &--pattern { background-image: url('../img/bg/pattern-05.png'); }
 
   &--fixed {
     background-repeat: no-repeat;
@@ -86,4 +87,26 @@
     }
   }
 }
+
+
+
+
+// ---------- ROADTRIP LINK BOX ----------
+
+.roadtrip-tile {
+  text-align: left;
+  &__content {
+    padding: $s2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 5;
+    width: 100%;
+    color: $white;
+  }
+  &--large {
+  }
+}
+
+
 
