--- a/css/core/_core.scss
+++ b/css/core/_core.scss
@@ -22,9 +22,12 @@ body, html { height: 100%; }
 }
 
 .page {
-  &__content { overflow: hidden; }
+  &__content {
+    overflow: hidden;
+  }
   &__background {
-    background-color: $black;
+    background-color: $theme-dark;
+    background-image: url('../img/bg/pattern-05.png');
     position: fixed;
     top: 0;
     bottom: 0;
