--- a/css/main.scss
+++ b/css/main.scss
@@ -9,11 +9,11 @@
   '../node_modules/susy/sass/susy',
 
   // core
+  'core/scale',
   'core/breakpoints',
   'core/colours',
   'core/z-index',
   'core/core',
-  'core/scale',
 
   // typography
   'typography/families',
@@ -41,6 +41,7 @@
   'page/footer',
   'page/banner',
   'page/articles',
+  'page/roadtrip',
 
   // components
   'components/unslider',
