roadtrip page development

--- a/_includes/components/roadtrip.html
+++ b/_includes/components/roadtrip.html
@@ -10,8 +10,8 @@
     {% endif %}
 
     <ul class="list--lined">
-      <li><p><span class="text--bold">Journey:</span> {{roadtrip.meta.journey}}</p></li>
-      <li><p><span class="text--bold">Length:</span> {{roadtrip.meta.distance}} / {{roadtrip.meta.time}}</p></li>
+      <li><p><span class="text--bold">Journey:</span> {{roadtrip.roadtrip.meta.journey}}</p></li>
+      <li><p><span class="text--bold">Length:</span> {{roadtrip.roadtrip.meta.distance}} / {{roadtrip.roadtrip.meta.time}}</p></li>
     </ul>
 
   </div>
