--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -42,11 +42,14 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   {% if page.extra-css %} <link rel="stylesheet" href="{{ site.baseurl }}/css/{{page.title | slugify}}.css"> {% endif %}
 
+  {% if page.layout == 'roadtrip' %}
+    <script src="{{ site.baseurl }}/js/roadtrips/{{page.id}}.js"></script>
+  {% endif %}
   <script src="{{ site.baseurl }}/js/scripts.min.js"></script>
   {% if page.extra-js %}<script src="{{ site.baseurl }}/js/{{page.title | slugify}}.js"></script>{% endif %}
 
   <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-  <script src='https://api.mapbox.com/mapbox-gl-js/v0.42.1/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.42.1/mapbox-gl.css' rel='stylesheet' />
+  <script src='https://api.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css' rel='stylesheet' />
 
 </head>
